--- a/styles/ui/cards.css
+++ b/styles/ui/cards.css
@@ -1,66 +1,33 @@
-body{
+body {
 	font-family: 'Inter';
 }
-.container{
+
+.cardGroup {
 	width: 100%;
-	display: flex;
-	max-width: 1100px;
+	margin: 25px;
 }
-.Card{
-	width: 100%;
+
+.Card {
 	margin: 20px;
 	border-radius: 6px;
 	overflow: hidden;
-	background-color: white;
-	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
-	cursor: default;
+	background-color: rgb(185, 208, 233);
+	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
 	transition: all 400ms ease;
-
-
 }
-.Card:hover{
-	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+
+.Card:hover {
+	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
 	transform: translateY(-3%);
 }
-.Card h1{
+
+.Card h5 {
 	text-align: center;
 	padding: 10px;
 }
-.Card img{
-	width: 100%;
-	height:210px;
-}
-.Card .contenido{
-	padding: 10px
-}
-.row{
-	
 
-	}
-.name{
-	font-size: 15px;
-	padding:5px;
-	display: flex;
-	height: 15px;
-    align-items: center;
-    float:left;
-    margin: 5px;
-}
-.tags{
-	float: left;
-}
-.tag{
-	background-color: orange;
-	padding:5px;
-	display: flex;
-	height: 15px;
-	border-radius: 8px;
-    align-items: center;
-    float:left;
-    color: white;
-    margin: 5px;
-}
-.tag:hover{
-	background-color: green;
-	color: white;
+.Card img {
+	width: 100%;
+	height: 210px;
 }
